# OES-toolbox

./: .gitignore  OES-toolbox.py  README.md  build-exe.py  pynsist.cfg  pyproject.toml  requirements.txt  setup.py
OES_toolbox/: Widgets.py  __init__.py  continuum.py  exporters.py  file_handling.py  fio.py  ident.py  io.py  lazy_import.py  logger.py  molecules.py  settings.py  toolbox.py
OES_toolbox/data/mol_spec/: CFBX.mod  CFCX.mod  CNBX.mod  NOAX.mod  NODX.mod  SiHAX.mod
OES_toolbox/pyAvantes/: LICENSE.txt
OES_toolbox/ui/: jh-paper.mplstyle  main.ui  main.ui.bak  res.qrc  resources.py
debian/: changelog  control  install  oes-toolbox.links  oes-toolbox.triggers  rules
docs/: CNAME  _config.yml
docs/_pages/: about.md  frontpage.md
launch_shim/: __init__.py
tests/: conftest.py  test_file_handling.py  test_supported_files.py
tests/test_files/: Andor_kinetic.sif  Horiba.txt  avasoft8_demo.RAW8
