[build-system]
requires = ["hatchling","hatch-vcs","hatch-fancy-pypi-readme","pynsist", "pip-tools"]
build-backend = "hatchling.build"

[project]
name = "OES-toolbox"
dynamic = ["version"]
description = "Tool for low-temperature plasma optical emission spectroscopy."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Julian Held", email = "j.held@tue.nl" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "file-read-backwards>=3.0.0",
    "matplotlib>=3.7.0",
    "moose-spectra>=0.2.1",
    "owlspec>=0.3.0",
    "PyQt6>=6.5.0",
    "pyqtgraph>=0.13.1",
    "sif-parser>=0.3.5",
    "pyarrow>=20.0.0",
    "xarray>=2025.4.0",
    "h5netcdf>=1.6.0",
    "charset-normalizer>=3.4.0",
    "spexread>=0.2.1",
    "qtawesome>=1.4.0",
    "avaread>=0.2.0",
    "xlsxwriter>=3.1.0"
]

[project.scripts]
OES-toolbox-dev = "OES_toolbox:main"

[project.gui-scripts]
OES-toolbox = "OES_toolbox:main"

[project.urls]
Homepage = "https://oes-toolbox.com"

[tool.hatch.version]
source="vcs"
fallback-version="0.0.1dev"

[tool.hatch.build.hooks.vcs]
version-file = "OES_toolbox/_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
    { path = "README.md" }
]

[tool.hatch.build]
packages = ["OES_toolbox/"]

[tool.hatch.build.targets.sdist]
include = [
    "/oes_toolbox",
]

[tool.hatch.envs.default]
installer = "uv"
extra-dependencies = ["ipykernel","ipython"]

[tool.hatch.envs.hatch-test]
parallel = false
extra-dependencies = ["hypothesis"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11","3.12","3.13"]

[tool.ruff]
line-length=120
target-version = "py310"

[tool.ruff.format]
exclude = ["*.py"]

[tool.ruff.lint]
extend-ignore = ["F401","E402","D"]
extend-select = ["E4", "E7", "E9", "F","C4", "SIM", "NPY", "PD","B","UP"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.cxfreeze]
executables = [
    {script = "OES-toolbox.py", base = "gui", icon="icon", shortcut_name="OES toolbox", shortcut_dir="MyProgramMenu"}
]

[tool.cxfreeze.build_exe]
packages = ["astropy", "scipy", "sqlalchemy", "owlspec"]
includes = ["pyqtgraph"]

[tool.cxfreeze.bdist_msi]
upgrade_code = "{03CE325A-E237-482B-9630-0B6584029808}"
install_icon = "icon.png"

[tool.cxfreeze.bdist_msi.data]
Directory = [
    ["ProgramMenuFolder", "TARGETDIR", "."],
    ["MyProgramMenu", "ProgramMenuFolder", "MYPROG~1|My Program"]
]
ProgId = [
    ["OES.toolbox", 0, 0, "Helping out with optical emission spectroscopy of low-temperature plasmas.", "OEStoolboxIcon", 0]
]
Icon = [
    ["OEStoolboxIcon", "icon.ico"]
]